--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^3.4.5",
+    "@typescript-eslint/eslint-plugin": "^1.7.0",
+    "@typescript-eslint/parser": "^1.7.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "husky": "^1.3.1",
     "prettier": "^1.17.0",
-    "pretty-quick": "^1.10.0"
+    "pretty-quick": "^1.10.0",
+    "typescript": "^3.4.5"
   },
   "husky": {
     "hooks": {
